use min of MAX_BATCH_SIZE and the user-specified value, refine url concatenation